--- a/stackheightcal.html
+++ b/stackheightcal.html
@@ -583,6 +583,8 @@ strong{
                 class="stack-calculator__input"
                 placeholder="Enter building height"
                 required
+                min="0.1"
+                step="0.1"
             >
         </div>
         <div class="stack-calculator__field">
@@ -595,12 +597,13 @@ strong{
                 class="stack-calculator__input"
                 placeholder="Enter generator capacity"
                 required
+                min="0.1"
+                step="0.1"
             >
         </div>
         <button
-            type="button"
+            type="submit"
             class="stack-calculator__button"
-            onclick="calculateStackHeight()"
         >
             Calculate Stack Height
         </button>
@@ -609,6 +612,7 @@ strong{
         <h2 class="stack-calculator__result-title">Total Height of Stack (H):</h2>
         <p id="stackHeight" class="stack-calculator__result-value"></p>
     </div>
+    <div id="error" class="stack-calculator__error" style="display: none; color: red;"></div>
 </div>
 
 <div class="note-container">
@@ -627,31 +631,38 @@ strong{
     <p>This results in an estimated total stack height that ensures safe and effective exhaust dispersion for the generator.</p>
     <p><strong>Note:</strong> While the calculator gives a general estimate, always consult with an engineer or regulatory body for precise calculations and to ensure compliance with environmental standards.</p>
 </div>
-
-
 <script>
-    function calculateStackHeight() {
-    const buildingHeight = parseFloat(document.getElementById("buildingHeight").value);
-    const generatorCapacity = parseFloat(document.getElementById("generatorCapacity").value);
+    document.getElementById("stackForm").addEventListener("submit", function (event) {
+        event.preventDefault(); // Prevent form submission
 
-    if (!buildingHeight || !generatorCapacity) {
-        alert("Please fill out both fields!");
-        return;
-    }
+        // Get input values
+        const buildingHeight = parseFloat(document.getElementById("buildingHeight").value);
+        const generatorCapacity = parseFloat(document.getElementById("generatorCapacity").value);
 
-    // Correct formula: H = h + 0.2 × √(KVA)
-    const stackHeight = buildingHeight + 0.2 * Math.sqrt(generatorCapacity);
+        // Get result and error elements
+        const resultDiv = document.getElementById("result");
+        const errorDiv = document.getElementById("error");
+        const stackHeightDisplay = document.getElementById("stackHeight");
 
-    // Display result
-    const resultDiv = document.getElementById("result");
-    const stackHeightDisplay = document.getElementById("stackHeight");
+        // Reset error and result display
+        errorDiv.style.display = "none";
+        resultDiv.style.display = "none";
 
-    stackHeightDisplay.textContent = `${stackHeight.toFixed(2)} metres`;
-    resultDiv.style.display = "block";
-}
+        // Input validation
+        if (isNaN(buildingHeight) || buildingHeight <= 0 || isNaN(generatorCapacity) || generatorCapacity <= 0) {
+            errorDiv.textContent = "Error: Please enter valid positive numbers for both Building Height and Generator Capacity.";
+            errorDiv.style.display = "block";
+            return;
+        }
 
+        // Formula: H = h + 0.2 × √(KVA)
+        const stackHeight = buildingHeight + 0.2 * Math.sqrt(generatorCapacity);
+
+        // Display result
+        stackHeightDisplay.textContent = `${stackHeight.toFixed(2)} metres`;
+        resultDiv.style.display = "block";
+    });
 </script>
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
